force-app/main/default/objects/Werk_Order__c/fields/Vast_Tapijt_Totaal_m__c.field-meta.xml
<CustomField>
    <fullName>Vast_Tapijt_Totaal_m__c</fullName>
    <label>Vast Tapijt - Totaal m²</label>
    <summarizedField>Wasserij_item__c.Aantal__c</summarizedField>
    <summaryFilterItems>
        <field>Wasserij_item__c.Item__c</field>
        <operation>equals</operation>
        <value>Vast tapijt</value>
    </summaryFilterItems>
    <summaryForeignKey>Wasserij_item__c.Werk_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>