force-app/main/default/objects/Werk_Order__c/fields/Verzendadres__c.field-meta.xml
<CustomField>
    <fullName>Verzendadres__c</fullName>
    <label>Verzendadres</label>
    <type>Address</type>
</CustomField>