force-app/main/default/objects/Werk_Order__c/fields/Vloerkleed_Lengte_grootste__c.field-meta.xml
<CustomField>
    <fullName>Vloerkleed_Lengte_grootste__c</fullName>
    <label>Vloerkleed - Lengte grootste</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>