force-app/main/default/objects/Werk_Order__c/fields/Vloerkleed_m_grootste__c.field-meta.xml
<CustomField>
    <fullName>Vloerkleed_m_grootste__c</fullName>
    <label>Vloerkleed - m² grootste</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>