force-app/main/default/objects/Werk_Order__c/fields/Volledige_betaling_ontvangen__c.field-meta.xml
<CustomField>
    <fullName>Volledige_betaling_ontvangen__c</fullName>
    <formula>IF(
Openstaand_Bedrag__c = 0,
TRUE,
IF(
Openstaand_Bedrag__c &gt; 0,
FALSE,
NULL
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volledige betaling ontvangen?</label>
    <type>Checkbox</type>
</CustomField>