force-app/main/default/objects/Werk_Order__c/fields/Voorinspectie_Opmerkingen__c.field-meta.xml
<CustomField>
    <fullName>Voorinspectie_Opmerkingen__c</fullName>
    <description>Komt in de voorinspectie mail te staan die naar de klant wordt verstuurd.</description>
    <inlineHelpText>Komt in de voorinspectie mail te staan die naar de klant wordt verstuurd.</inlineHelpText>
    <label>Voorinspectie Opmerkingen</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>