force-app/main/default/objects/Werk_Order__c/fields/Wasserij_items_klaar_voor_aflevering__c.field-meta.xml
<CustomField>
    <fullName>Wasserij_items_klaar_voor_aflevering__c</fullName>
    <label>Wasserij items klaar voor aflevering</label>
    <summaryFilterItems>
        <field>Wasserij_item__c.Klaar_voor_aflevering__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Wasserij_item__c.Werk_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>