force-app/main/default/objects/Werk_Order__c/fields/Wasserij_Items_Voorinspectie_klaar__c.field-meta.xml
<CustomField>
    <fullName>Wasserij_Items_Voorinspectie_klaar__c</fullName>
    <label>Wasserij Items Voorinspectie klaar</label>
    <summaryFilterItems>
        <field>Wasserij_item__c.Voorinspectie_gedaan__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Wasserij_item__c.Werk_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>