force-app/main/default/objects/Werk_Order__c/fields/Werk_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Werk_Order_Status__c</fullName>
    <label>Werk Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Werk_Order_Status</valueSetName>
    </valueSet>
</CustomField>