force-app/main/default/objects/Werk_Order__c/fields/Woocommerce_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Woocommerce_Order_Id__c</fullName>
    <label>Woocommerce Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>