force-app/main/default/objects/Werk_Order__c/fields/Zelf_brengen__c.field-meta.xml
<CustomField>
    <fullName>Zelf_brengen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zelf brengen</label>
    <type>Checkbox</type>
</CustomField>