force-app/main/default/objects/Werk_Order__c/fields/Zelf_halen__c.field-meta.xml
<CustomField>
    <fullName>Zelf_halen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zelf halen</label>
    <type>Checkbox</type>
</CustomField>