force-app/main/default/objects/Werk_Order__c/recordTypes/Productorder.recordType-meta.xml
<RecordType>
    <fullName>Productorder</fullName>
    <active>true</active>
    <label>Productorder</label>
</RecordType>