force-app/main/default/objects/Werk_Order__c/recordTypes/SofaSaver.recordType-meta.xml
<RecordType>
    <fullName>SofaSaver</fullName>
    <active>true</active>
    <label>SofaSaver</label>
</RecordType>