force-app/main/default/objects/Werk_Order__c/recordTypes/SR_Zakelijk.recordType-meta.xml
<RecordType>
    <fullName>SR_Zakelijk</fullName>
    <active>true</active>
    <description>Gebruiken voor SR Zakelijk.</description>
    <label>SR Zakelijk</label>
</RecordType>