force-app/main/default/objects/Werk_Order__c/recordTypes/Uitvoering.recordType-meta.xml
<RecordType>
    <fullName>Uitvoering</fullName>
    <active>true</active>
    <description>Gebruik deze voor SR Particulier.</description>
    <label>SR Particulier</label>
</RecordType>