force-app/main/default/objects/Werk_Order__c/recordTypes/Wasserij.recordType-meta.xml
<RecordType>
    <fullName>Wasserij</fullName>
    <active>true</active>
    <description>Gebruik deze voor items die in de onze wasserij worden gereinigd.</description>
    <label>Wasserij</label>
</RecordType>