force-app/main/default/objects/Werk_Order__c/recordTypes/Werk_Order_Reparatie.recordType-meta.xml
<RecordType>
    <fullName>Werk_Order_Reparatie</fullName>
    <active>false</active>
    <label>Reparatie</label>
</RecordType>