force-app/main/default/objects/Werk_Order__c/validationRules/Wasserij_Record_type_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Wasserij_Record_type_validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND($RecordType.Name=&quot;Wasserij&quot;, $ObjectType.Wasserij_item__c.Fields.RecordTypeId =&quot;0125p0000015CIVAA2&quot;)</errorConditionFormula>
    <errorMessage>Please select Correct Wasserij record type</errorMessage>
</ValidationRule>