force-app/main/default/objects/Werk_Order__c/listViews/Alle.listView-meta.xml
<ListView>
    <fullName>Alle</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
</ListView>