force-app/main/default/objects/Werk_Order__c/listViews/Ophaal_Afleverafspraken.listView-meta.xml
<ListView>
    <fullName>Ophaal_Afleverafspraken</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Werk_Order_Status__c</columns>
    <columns>Ophaaladres1__City__s</columns>
    <columns>Afleveradres1__City__s</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Ophalen_Vanaf_Datum__c</columns>
    <columns>Afleveren_Vanaf_Datum__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Werk_Order_Status__c</field>
        <operation>equals</operation>
        <value>Ophalen ingepland,Terugbrengen ingepland</value>
    </filters>
    <filters>
        <field>Bevestigingen_sturen__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Totaal_wasserij_items__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </filters>
    <label>Ophaal-/Afleverafspraken Geaccepteerd</label>
</ListView>