force-app/main/default/objects/Werk_Order__c/listViews/Routes.listView-meta.xml
<ListView>
    <fullName>Routes</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Routes</label>
</ListView>