force-app/main/default/objects/Werk_Order__c/listViews/SR_Inplannen.listView-meta.xml
<ListView>
    <fullName>SR_Inplannen</fullName>
    <columns>NAME</columns>
    <columns>Projectadres1__City__s</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Opmerkingen_voor_Planning__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Werk_Order_Status__c</field>
        <operation>equals</operation>
        <value>Klaar om ingepland te worden</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Werk_Order__c.Uitvoering,Werk_Order__c.SR_Zakelijk</value>
    </filters>
    <label>SR Inplannen</label>
</ListView>