force-app/main/default/objects/Werk_Order__c/listViews/Wachten_op_adresgegevens.listView-meta.xml
<ListView>
    <fullName>Wachten_op_adresgegevens</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Ophaaladres1__City__s</columns>
    <columns>Opmerkingen_voor_Planning__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Werk_Order_Status__c</field>
        <operation>equals</operation>
        <value>Wachten op adresgegevens</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Werk_Order__c.Uitvoering,Werk_Order__c.SR_Zakelijk,Werk_Order__c.SofaSaver,Werk_Order__c.Wasserij</value>
    </filters>
    <label>Wachten op adresgegevens</label>
</ListView>