force-app/main/default/objects/Werk_Order__c/listViews/Wasserij_SofaSaver_Opdracht.listView-meta.xml
<ListView>
    <fullName>Wasserij_SofaSaver_Opdracht</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Ophaaladres1__City__s</columns>
    <columns>Opmerkingen_voor_Planning__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Werk_Order_Status__c</field>
        <operation>equals</operation>
        <value>Ophalen plannen,Klaar om ingepland te worden,Voorstel afspraak gedaan</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Werk_Order__c.SofaSaver,Werk_Order__c.Wasserij</value>
    </filters>
    <label>Wasserij / SofaSaver Opdracht</label>
</ListView>